--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,9 @@
 <head>
-  <title>simple</title>
+  <title>http-proxy in Meteor</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
+  <h1>Is this for me?</h1>
+  If you like use <a href="https://github.com/chill117/proxy-lists">proxy-list</a> npm module in Meteor framework then this project can useful for you. I try to use proxy-list asynchronous API in a right way in Meteor 1.3.2.4 that has new official npm integration.
+  <h3><a href="https://github.com/MeteorDemoApps/proxy-lists-demo">MeteorDemoApps/proxy-lists-demo</a></h3>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com">Discussions</a></li>
-  </ul>
-</template>
